test/ill-formed/unsupported/try_except.py
try:
    x = 1
except:
    x = 0
print(x)
